netmaumau (0.4) UNRELEASED; urgency=low

  * If a player has lost due a played out Jack, the points are doubled
  * If a player has lost and a 7 is the open card, the player takes the 
    cards and they get added to the points
  * Fixed https://github.com/velnias75/NetMauMau/issues/2

 -- Heiko Schäfer <heiko@rangun.de>  Tue, 02 Dec 2014 05:05:40 +0100

netmaumau (0.3) UNRELEASED; urgency=low

  * On Win32 systems every log message gets flushed afterwards
  * Support for up to 4 AI players

 -- Heiko Schäfer <heiko@rangun.de>  Wed, 26 Nov 2014 12:28:36 +0100

netmaumau (0.2) UNRELEASED; urgency=low

  * Initial release

 -- Heiko Schäfer <heiko@rangun.de>  Sat, 01 Nov 2014 17:38:01 +0100